Implement schema creation for nodes